# tcob_extlibs

./: .clang-format  .clangd  CMakeLists.txt
AL/: mojoal.c
SDL_net/: SDLnetTCP.c
TinySoundFont/: TinySoundFont.c  tml.h  tsf.h
XiphOgg/libopusenc/src/: opusenc.c
XiphOrg/ogg/ogg/: os_types.h
XiphOrg/theora/: theoraplay.c
_licenses/: SDL3_license.txt  clipper2_license.txt  lua_license.txt  mojo-al_license.txt  physfs_license.txt
box2d/src/common/: b2_settings.cpp
chipmunk2d/include/chipmunk/: chipmunk.h
chipmunk2d/src/: cpBody.cpp
dr_libs/: dr_libs.c
glad/: gl.c  gl.h  gl45.c  gl45.h  gles30.c  gles30.h
libschrift/: schrift.c
libxmp-lite/include/libxmp-lite/: xmp.h
libxmp-lite/src/: common.h
litehtml/include/litehtml/: document.h  element.h
litehtml/src/: document.cpp  el_anchor.cpp  el_text.cpp  element.cpp  html_tag.cpp  line_box.cpp  render_inline_context.cpp  stylesheet.cpp
litehtml/src/gumbo/visualc/include/: strings.h
lua/: lprefix.h  lua.hpp  lua_license.txt
ogg/ogg/: os_types.h
oggtheora/: theoraplay.h
oggtheora/ogg/: os_types.h
opt/TinySoundFont/: TinySoundFont.c  stb_vorbis.c
opt/XiphOrg/ogg/ogg/: os_types.h
opt/XiphOrg/theora/: theoraplay.c  theoraplay.h
opt/dr_libs/: dr_libs.c
opt/glad/: gl45.h  gles20.c  gles20.h  gles30.c  gles30.h
opt/luajit/: CMakeLists.txt  LuaJIT.cmake
opt/speech/: speech.h
physfs/: physfs.c  physfs.h  physfs_archiver_zip.c  physfs_internal.h  physfs_platform_posix.c  physfs_platform_unix.c
req/AL/: al.h  alc.h  mojoal.c
req/Clipper2Lib/include/clipper2/: clipper.core.h  clipper.export.h  clipper.h  clipper.triangulation.h
req/Clipper2Lib/src/: clipper.engine.cpp  clipper.offset.cpp  clipper.rectclip.cpp  clipper.triangulation.cpp
req/earcut/: earcut.hpp
req/utf8/include/: lowertab.h  uppertab.h
req/utf8/include/utf8/: utf8.h
req/utf8/src/: utf8.cpp
speech/: speech.c
spng/: spng.c
stb/: stb_truetype.c  stb_truetype.h  stb_vorbis.c
wren/src/vm/: wren_common.h
